# coding-agents-databricks-apps

./: .gitignore  CLAUDE.md  Makefile  NOTICE.md  README.md  app.py  app.yaml  app.yaml.template  cli_auth.py  content_filter_proxy.py  enterprise_config.py  install_node.sh  mlflow_stop_hook.py  obo_auth.py  pat_rotator.py  pyproject.toml  requirements.txt  setup_appkit.py  setup_claude.py  setup_codex.py  setup_gemini.py  setup_hermes.py  setup_mlflow.py  setup_opencode.py  telemetry.py  todos.md  utils.py
.claude/skills/: SKILLS_SOURCE.md
.claude/skills/databricks-apps-python/: 3-frameworks.md  5-lakebase.md  7-appkit-ux.md  SKILL.md
.claude/skills/databricks-apps-python/examples/appkit-ux/: README.md  app-shell.tsx  dashboard-page.tsx  data-view-states.tsx  theme-provider.tsx
.github/: SECURITY.md
.github/workflows/: dependency-audit.yml  release.yml  test.yml  update-lockfile.yml
coda_mcp/: databricks_preamble.py  mcp_asgi.py  mcp_endpoint.py  mcp_server.py  task_manager.py  url_builder.py  workspace_export.py
docs/: SECURITY.md  coda-mcp-overview.html  deployment.md  enterprise.md  lab-build.md
docs/plans/: 2026-05-01-coda-mcp-server.md  2026-06-10-obo-agent-auth.md
docs/superpowers/plans/: 2026-05-27-coda-mcp-live-session-url.md  2026-05-28-coda-interactive-broaden-source.md  2026-05-28-coda-interactive-mcp-tool.md  2026-05-28-coda-interactive-terminal-pull.md  2026-05-28-coda-run-replay-only.md  2026-05-28-coda-run-workflow-protocol.md
docs/superpowers/specs/: 2026-05-27-coda-mcp-live-session-url-design.md  2026-05-28-coda-interactive-broaden-source-design.md  2026-05-28-coda-interactive-mcp-tool-design.md  2026-05-28-coda-interactive-terminal-pull-design.md  2026-05-28-coda-run-replay-only-design.md  2026-05-28-coda-run-workflow-protocol-design.md
instructions/: lab_coach.md
scripts/: enterprise_doctor.py  install_databricks_cli.sh  install_gh.sh  install_micro.sh  lab_deploy.py  lakebase_ensure.py
setup/: setup_claude.py  setup_codex.py  setup_hermes.py  setup_opencode.py  setup_proxy.py
static/: index.html
tests/: conftest.py  test_agent_auth_mode.py  test_app_url_middleware.py  test_appkit_skill_guardrails.py  test_auth_enforcement.py  test_cli_token_rotation.py  test_coda_bridge.py  test_coda_interactive.py  test_content_filter_proxy.py  test_databricks_preamble.py  test_enterprise_config.py  test_inbox_status_passthrough.py  test_lab_deploy.py  test_lab_deploy_obo.py  test_lakebase_ensure.py  test_lean_profile.py  test_mcp_endpoint.py  test_mcp_env_strip.py  test_mcp_integration.py  test_mcp_server.py  test_mlflow_tracing.py  test_npm_version_pinning.py  test_obo_auth.py  test_obo_boot.py  test_obo_capture.py  test_obo_endpoints.py  test_obo_refresh.py  test_pat_rotator.py  test_reinit_app_git.py  test_replay_attach.py  test_replay_only_flag.py  test_session_linger.py  test_setup_proxy.py  test_setup_resource_paths.py  test_task_manager.py  test_telemetry_opt_out.py  test_terminal_env_strip.py  test_terminate_session_idempotent.py  test_transcript.py  test_url_builder.py  (+2 more)
tests/e2e/: README.md  conftest.py  test_lab_workspace_auth.py  test_live_security.py
tests/integration/: Dockerfile.apps-like  run_pipeline.sh  test_setup_pipeline.py  verify.sh
