[project]
name = "coda"
version = "0.18.2"
description = "CoDA - Coding Agents on Databricks Apps"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.0",
    "flask-socketio>=5.0",
    "simple-websocket>=1.0",
    "claude-agent-sdk",
    "databricks-sdk>=0.106.0",
    "mlflow-skinny==3.12.0",
    "requests",
    "cryptography>=46.0.7",
    # Security floors — make CVE-driven minimums explicit so future resolves
    # can't silently downgrade. See PR description for advisory IDs.
    "gitpython>=3.1.49",
    "python-multipart>=0.0.27",
    # Upper bound is forced by our transitive ecosystem: both mlflow-skinny 3.11.x
    # AND opentelemetry-api 1.41.x cap importlib-metadata<8.8. Dependabot tried
    # to bump it to 9.0.0 (PR #3) and broke every deploy — explicit ceiling so
    # the bot won't try again until upstream widens its caps.
    "importlib-metadata<8.8",
]

[tool.uv]
# Exclude packages uploaded to PyPI more recently than ~30 days ago.
# This gives the community time to catch supply-chain issues before they land here.
# Bump this date when you intentionally need a newer release.
exclude-newer = "7 days"

[tool.uv.sources]
# Direct GitHub installs — workaround for Databricks internal PyPI proxy gaps.
# Remove these once the proxy has current versions.
requests = { git = "https://github.com/psf/requests", rev = "v2.33.0" }
